# RememberMeBot

./: .breakpoints  main.py  movies  pyproject.toml
lore/: advice  auto_movie_list  drinks  glassware  quiz_1  quiz_2  quiz_3  spooky_words
