[tool.poetry]
name = "repl_python3_RememberMeBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.2.4"
zalgo-text = "^0.6"
GlitchArt = "^1.0.0"
imageio = "^2.9.0"
glitch-this = "^1.0.2"
bs4 = "^0.0.1"
"trivia.py" = "^1.0.8"
tmdbsimple = "^2.8.0"
fuzzywuzzy = "^0.18.0"
Levenshtein = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
